--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <p class="card__name">stevedevinc@gmail.com</p>
+        <p class="card__name">stephenokeleke@yahoo.com</p>
         <div class="grid-container">
 
           <div class="grid-child-posts">
